fud2/tests/snapshots/tests__test@s3_to_s4.snap
---
source: fud2/tests/tests.rs
description: "emit request: s3 -> s4"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t2_rule_1
  command = echo five
build f4 f5: t2_rule_1 $i0
  i0 = s3_0
  o0 = s4_1


default s4_1
