fud2/tests/snapshots/tests__test@s5_to_s6.snap
---
source: fud2/tests/tests.rs
description: "emit request: s5 -> s6"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t3_rule_1
  command = echo Char
build _t3_rule_1.fake: t3_rule_1 $i0
  i0 = s50
  o0 = s61

rule t3_rule_2
  command = echo Ray
build _t3_rule_2.fake: t3_rule_2 _t3_rule_1.fake
  i0 = s50
  o0 = s61

rule t3_rule_3
  command = echo Saura
build _t3_rule_3.fake $o0: t3_rule_3 _t3_rule_2.fake
  i0 = s50
  o0 = s61


default s61
