fud2/tests/snapshots/tests__test@state0_to_state1-2.snap
---
source: fud2/tests/tests.rs
description: "emit request: state0 -> state1"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

rule t0
  command = echo uwu
build _to_stdout_state1: t0 _from_stdin_state0
  i0 = _from_stdin_state0
  o0 = _to_stdout_state1


default _to_stdout_state1
